# Termail

./: CLAUDE.md  Cargo.toml  README.md
libs/ratatui-image/: Cargo.toml
libs/ratatui-image/src/protocol/: iterm2.rs  kitty.rs
src/: app.rs  event.rs  main.rs  message.rs  setup.rs
src/auth/: google.rs  microsoft.rs  mod.rs  token_store.rs
src/backend/: imap.rs  mod.rs
src/cache/: mod.rs  search.rs  sqlite.rs  sync.rs
src/config/: mod.rs  schema.rs
src/models/: account.rs  email.rs  envelope.rs  mailbox.rs  mod.rs
src/ui/: animations.rs  compose.rs  email_preview.rs  html_renderer.rs  inbox_list.rs  log_viewer.rs  mod.rs  search_bar.rs  setup.rs  status_bar.rs
