[package]
name = "termail"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI framework
ratatui = { version = "0.30", features = ["all-widgets", "crossterm_0_28"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tachyonfx = "0.24"

# Async runtime
tokio = { version = "1", features = ["full"] }

# IMAP/SMTP
async-imap = "0.10"
async-native-tls = "0.5"
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport"] }

# IMAP protocol types
imap-proto = "0.16"

# Email parsing
mailparse = "0.15"

# OAuth2
yup-oauth2 = "11"

# Local cache
rusqlite = { version = "0.32", features = ["bundled"] }

# Full-text search
tantivy = "0.22"

# HTML to text (with CSS colour support for rich rendering)
html2text = { version = "0.14", features = [] }

# HTML5-compliant DOM parser for custom rich rendering
scraper = "0.22"
ego-tree = "0.10"

# Terminal image rendering (Kitty/iTerm2/Sixel + unicode fallback)
ratatui-image = { path = "libs/ratatui-image", default-features = false, features = ["image-defaults", "crossterm"] }
image = "0.25"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# XDG directories
directories = "6"

# Async trait
async-trait = "0.1"

# Futures
futures = "0.3"

# Base64 encoding
base64 = "0.22"

# Async std for async-imap compatibility
async-std = "1"

# HTTP client for fetching external images
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tempfile = "3"
